état après réunion de mardi

--- a/interpolation_plate.ipynb
+++ b/interpolation_plate.ipynb
@@ -6,11 +6,11 @@
    "id": "0b23a331-1a6d-4685-9ffe-95c1a2c50bc4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-11T08:29:14.048829Z",
-     "iopub.status.busy": "2024-03-11T08:29:14.046813Z",
-     "iopub.status.idle": "2024-03-11T08:29:14.709339Z",
-     "shell.execute_reply": "2024-03-11T08:29:14.707317Z",
-     "shell.execute_reply.started": "2024-03-11T08:29:14.048748Z"
+     "iopub.execute_input": "2024-03-12T07:43:12.449280Z",
+     "iopub.status.busy": "2024-03-12T07:43:12.448582Z",
+     "iopub.status.idle": "2024-03-12T07:43:17.152603Z",
+     "shell.execute_reply": "2024-03-12T07:43:17.151042Z",
+     "shell.execute_reply.started": "2024-03-12T07:43:12.449225Z"
     },
     "tags": []
    },
@@ -35,11 +35,11 @@
    "id": "af6e6c5d-9298-462e-9465-d4654b383e3a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-11T08:29:14.720157Z",
-     "iopub.status.busy": "2024-03-11T08:29:14.719584Z",
-     "iopub.status.idle": "2024-03-11T08:29:14.729621Z",
-     "shell.execute_reply": "2024-03-11T08:29:14.727870Z",
-     "shell.execute_reply.started": "2024-03-11T08:29:14.720102Z"
+     "iopub.execute_input": "2024-03-12T07:43:18.220390Z",
+     "iopub.status.busy": "2024-03-12T07:43:18.219530Z",
+     "iopub.status.idle": "2024-03-12T07:43:18.234479Z",
+     "shell.execute_reply": "2024-03-12T07:43:18.228762Z",
+     "shell.execute_reply.started": "2024-03-12T07:43:18.220331Z"
     },
     "tags": []
    },
@@ -60,11 +60,11 @@
    "id": "af22d4db-473b-4311-bc81-eaa046b0dbe0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-11T08:29:14.917208Z",
-     "iopub.status.busy": "2024-03-11T08:29:14.916351Z",
-     "iopub.status.idle": "2024-03-11T08:29:14.929454Z",
-     "shell.execute_reply": "2024-03-11T08:29:14.927257Z",
-     "shell.execute_reply.started": "2024-03-11T08:29:14.917135Z"
+     "iopub.execute_input": "2024-03-12T07:43:18.906435Z",
+     "iopub.status.busy": "2024-03-12T07:43:18.905841Z",
+     "iopub.status.idle": "2024-03-12T07:43:18.915239Z",
+     "shell.execute_reply": "2024-03-12T07:43:18.913632Z",
+     "shell.execute_reply.started": "2024-03-12T07:43:18.906384Z"
     },
     "tags": []
    },
@@ -86,11 +86,11 @@
    "id": "d5922552-8dc7-4436-a1a8-e014e9190638",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-11T08:29:15.195722Z",
-     "iopub.status.busy": "2024-03-11T08:29:15.194800Z",
-     "iopub.status.idle": "2024-03-11T08:29:15.205996Z",
-     "shell.execute_reply": "2024-03-11T08:29:15.203692Z",
-     "shell.execute_reply.started": "2024-03-11T08:29:15.195647Z"
+     "iopub.execute_input": "2024-03-12T07:43:19.370204Z",
+     "iopub.status.busy": "2024-03-12T07:43:19.368987Z",
+     "iopub.status.idle": "2024-03-12T07:43:19.377390Z",
+     "shell.execute_reply": "2024-03-12T07:43:19.375784Z",
+     "shell.execute_reply.started": "2024-03-12T07:43:19.370136Z"
     },
     "tags": []
    },
@@ -113,11 +113,11 @@
    "id": "6443215b-2834-451e-a160-89ca8b52ad3d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-11T08:29:15.382664Z",
-     "iopub.status.busy": "2024-03-11T08:29:15.381888Z",
-     "iopub.status.idle": "2024-03-11T08:29:15.392831Z",
-     "shell.execute_reply": "2024-03-11T08:29:15.390644Z",
-     "shell.execute_reply.started": "2024-03-11T08:29:15.382596Z"
+     "iopub.execute_input": "2024-03-12T07:43:20.028552Z",
+     "iopub.status.busy": "2024-03-12T07:43:20.027900Z",
+     "iopub.status.idle": "2024-03-12T07:43:20.035876Z",
+     "shell.execute_reply": "2024-03-12T07:43:20.034556Z",
+     "shell.execute_reply.started": "2024-03-12T07:43:20.028495Z"
     },
     "tags": []
    },
@@ -137,11 +137,11 @@
    "id": "e803cbfa-da35-4056-8680-d40e27aa26ff",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-11T08:29:15.694564Z",
-     "iopub.status.busy": "2024-03-11T08:29:15.693805Z",
-     "iopub.status.idle": "2024-03-11T08:29:16.445356Z",
-     "shell.execute_reply": "2024-03-11T08:29:16.442851Z",
-     "shell.execute_reply.started": "2024-03-11T08:29:15.694494Z"
+     "iopub.execute_input": "2024-03-12T07:43:20.739414Z",
+     "iopub.status.busy": "2024-03-12T07:43:20.738718Z",
+     "iopub.status.idle": "2024-03-12T07:43:23.757851Z",
+     "shell.execute_reply": "2024-03-12T07:43:23.755893Z",
+     "shell.execute_reply.started": "2024-03-12T07:43:20.739357Z"
     },
     "tags": []
    },
@@ -151,7 +151,7 @@
      "output_type": "stream",
      "text": [
       "Info    : Running '/opt/jlab-env/bin/gmsh -2 -order 1 -o plate.msh plate.geo' [Gmsh 4.11.1, 1 node, max. 1 thread]\n",
-      "Info    : Started on Mon Mar 11 09:29:16 2024\n",
+      "Info    : Started on Tue Mar 12 08:43:22 2024\n",
       "Info    : Reading 'plate.geo'...\n",
       "Info    : Done reading 'plate.geo'\n",
       "Info    : Meshing 1D...\n",
@@ -160,14 +160,14 @@
       "Info    : [ 40%] Meshing curve 3 (Line)\n",
       "Info    : [ 60%] Meshing curve 4 (Line)\n",
       "Info    : [ 80%] Meshing curve 5 (Line)\n",
-      "Info    : Done meshing 1D (Wall 0.00909786s, CPU 0.006222s)\n",
+      "Info    : Done meshing 1D (Wall 0.0142238s, CPU 0.012701s)\n",
       "Info    : Meshing 2D...\n",
       "Info    : Meshing surface 7 (Plane, Frontal-Delaunay)\n",
-      "Info    : Done meshing 2D (Wall 0.0598976s, CPU 0.05516s)\n",
+      "Info    : Done meshing 2D (Wall 0.108099s, CPU 0.087953s)\n",
       "Info    : 2058 nodes 4118 elements\n",
       "Info    : Writing 'plate.msh'...\n",
       "Info    : Done writing 'plate.msh'\n",
-      "Info    : Stopped on Mon Mar 11 09:29:16 2024 (From start: Wall 0.119233s, CPU 0.585574s)\n",
+      "Info    : Stopped on Tue Mar 12 08:43:23 2024 (From start: Wall 0.417365s, CPU 0.619383s)\n",
       "Mesh generated\n"
      ]
     }
@@ -189,11 +189,11 @@
    "id": "a06c9de7-1b07-4ffd-9bd6-d9ed2769a5b0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-11T08:29:16.449893Z",
-     "iopub.status.busy": "2024-03-11T08:29:16.449164Z",
-     "iopub.status.idle": "2024-03-11T08:29:16.485682Z",
-     "shell.execute_reply": "2024-03-11T08:29:16.483481Z",
-     "shell.execute_reply.started": "2024-03-11T08:29:16.449828Z"
+     "iopub.execute_input": "2024-03-12T07:43:23.761543Z",
+     "iopub.status.busy": "2024-03-12T07:43:23.760743Z",
+     "iopub.status.idle": "2024-03-12T07:43:23.903743Z",
+     "shell.execute_reply": "2024-03-12T07:43:23.901930Z",
+     "shell.execute_reply.started": "2024-03-12T07:43:23.761483Z"
     },
     "tags": []
    },
@@ -212,11 +212,11 @@
    "id": "06ef11b7-9138-492d-80eb-c78d2c450c3b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-11T08:29:16.488759Z",
-     "iopub.status.busy": "2024-03-11T08:29:16.488199Z",
-     "iopub.status.idle": "2024-03-11T08:29:16.536606Z",
-     "shell.execute_reply": "2024-03-11T08:29:16.534214Z",
-     "shell.execute_reply.started": "2024-03-11T08:29:16.488709Z"
+     "iopub.execute_input": "2024-03-12T07:43:26.566725Z",
+     "iopub.status.busy": "2024-03-12T07:43:26.566072Z",
+     "iopub.status.idle": "2024-03-12T07:43:26.575991Z",
+     "shell.execute_reply": "2024-03-12T07:43:26.574374Z",
+     "shell.execute_reply.started": "2024-03-12T07:43:26.566670Z"
     },
     "tags": []
    },
@@ -247,18 +247,17 @@
    "id": "74e0b886-49dd-4965-b2d1-954362fadf0a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-11T08:29:17.443322Z",
-     "iopub.status.busy": "2024-03-11T08:29:17.442413Z",
-     "iopub.status.idle": "2024-03-11T08:29:17.468121Z",
-     "shell.execute_reply": "2024-03-11T08:29:17.465731Z",
-     "shell.execute_reply.started": "2024-03-11T08:29:17.443248Z"
+     "iopub.execute_input": "2024-03-12T07:43:28.347694Z",
+     "iopub.status.busy": "2024-03-12T07:43:28.347024Z",
+     "iopub.status.idle": "2024-03-12T07:43:28.376575Z",
+     "shell.execute_reply": "2024-03-12T07:43:28.374800Z",
+     "shell.execute_reply.started": "2024-03-12T07:43:28.347640Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "model = aka.SolidMechanicsModel(mesh)\n",
-    "model.initFull(_analysis_method=aka._static)"
+    "model = aka.SolidMechanicsModel(mesh)"
    ]
   },
   {
@@ -267,11 +266,11 @@
    "id": "963641eb-cff8-42bb-9fd0-3d4a060bf14b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-11T08:29:17.874855Z",
-     "iopub.status.busy": "2024-03-11T08:29:17.874072Z",
-     "iopub.status.idle": "2024-03-11T08:29:17.887587Z",
-     "shell.execute_reply": "2024-03-11T08:29:17.885175Z",
-     "shell.execute_reply.started": "2024-03-11T08:29:17.874787Z"
+     "iopub.execute_input": "2024-03-12T07:43:29.159603Z",
+     "iopub.status.busy": "2024-03-12T07:43:29.158927Z",
+     "iopub.status.idle": "2024-03-12T07:43:29.170155Z",
+     "shell.execute_reply": "2024-03-12T07:43:29.168086Z",
+     "shell.execute_reply.started": "2024-03-12T07:43:29.159549Z"
     },
     "tags": []
    },
@@ -301,11 +300,11 @@
    "id": "2927df9d-4836-46ec-80bf-19b846f96494",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-11T08:29:18.775310Z",
-     "iopub.status.busy": "2024-03-11T08:29:18.774397Z",
-     "iopub.status.idle": "2024-03-11T08:29:18.786692Z",
-     "shell.execute_reply": "2024-03-11T08:29:18.784461Z",
-     "shell.execute_reply.started": "2024-03-11T08:29:18.775239Z"
+     "iopub.execute_input": "2024-03-12T07:43:30.483150Z",
+     "iopub.status.busy": "2024-03-12T07:43:30.482474Z",
+     "iopub.status.idle": "2024-03-12T07:43:30.492488Z",
+     "shell.execute_reply": "2024-03-12T07:43:30.490588Z",
+     "shell.execute_reply.started": "2024-03-12T07:43:30.483094Z"
     },
     "tags": []
    },
@@ -317,20 +316,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "0001f006-0822-4084-9833-f90b6ee6080b",
+   "cell_type": "raw",
+   "id": "d64daee4-95b2-47c9-ab9b-79dbfc87b71f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-11T08:29:19.394118Z",
-     "iopub.status.busy": "2024-03-11T08:29:19.393336Z",
-     "iopub.status.idle": "2024-03-11T08:29:19.405425Z",
-     "shell.execute_reply": "2024-03-11T08:29:19.403064Z",
-     "shell.execute_reply.started": "2024-03-11T08:29:19.394051Z"
+     "iopub.execute_input": "2024-03-11T10:41:39.670816Z",
+     "iopub.status.busy": "2024-03-11T10:41:39.670033Z",
+     "iopub.status.idle": "2024-03-11T10:41:39.682737Z",
+     "shell.execute_reply": "2024-03-11T10:41:39.680312Z",
+     "shell.execute_reply.started": "2024-03-11T10:41:39.670748Z"
     },
     "tags": []
    },
-   "outputs": [],
    "source": [
     "# output vector (will be filled by the method \"interpolateOnIntegrationPoints\")\n",
     "## dimension à adapter selon le nbr de point de quadrature ? (ici 1 point par élément)\n",
@@ -340,15 +337,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "04dee6eb-b2b6-4ea5-a7c4-c0a3d570d32f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-11T08:29:19.774334Z",
-     "iopub.status.busy": "2024-03-11T08:29:19.773575Z",
-     "iopub.status.idle": "2024-03-11T08:29:19.785110Z",
-     "shell.execute_reply": "2024-03-11T08:29:19.782653Z",
-     "shell.execute_reply.started": "2024-03-11T08:29:19.774268Z"
+     "iopub.execute_input": "2024-03-12T07:43:32.038934Z",
+     "iopub.status.busy": "2024-03-12T07:43:32.038233Z",
+     "iopub.status.idle": "2024-03-12T07:43:32.046343Z",
+     "shell.execute_reply": "2024-03-12T07:43:32.044757Z",
+     "shell.execute_reply.started": "2024-03-12T07:43:32.038880Z"
     },
     "tags": []
    },
@@ -363,31 +360,41 @@
    "id": "96e74c41-1d14-4f18-a6cd-5df4bbf878cf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-11T08:29:20.264572Z",
-     "iopub.status.busy": "2024-03-11T08:29:20.262779Z",
-     "iopub.status.idle": "2024-03-11T08:29:20.498213Z",
-     "shell.execute_reply": "2024-03-11T08:29:20.496862Z",
-     "shell.execute_reply.started": "2024-03-11T08:29:20.264500Z"
+     "iopub.execute_input": "2024-03-12T07:43:49.519667Z",
+     "iopub.status.busy": "2024-03-12T07:43:49.517955Z",
+     "iopub.status.idle": "2024-03-12T07:43:49.575073Z",
+     "shell.execute_reply": "2024-03-12T07:43:49.572983Z",
+     "shell.execute_reply.started": "2024-03-12T07:43:49.519613Z"
     },
     "tags": []
    },
    "outputs": [
     {
-     "ename": "Exception",
-     "evalue": "akantu::debug::Exception : cannot resize a temporary array [../../../python/py_aka_array.hh:77]",
+     "ename": "TypeError",
+     "evalue": "interpolateOnIntegrationPoints(): incompatible function arguments. The following argument types are supported:\n    1. (self: akantu.py11_akantu.FEEngine, u: AkaArray, uq: AkaArray, nb_degree_of_freedom: int, type: akantu.py11_akantu.ElementType, ghost_type: akantu.py11_akantu.GhostType = <GhostType._not_ghost: 0>, filter_elements: AkaArray = array([], shape=(0, 1), dtype=int32)) -> None\n    2. (self: akantu.py11_akantu.FEEngine, u: AkaArray, uq: akantu.py11_akantu.ElementTypeMapArrayReal, filter_elements: akantu.py11_akantu.ElementTypeMapArrayInt = None) -> None\n\nInvoked with: <akantu.py11_akantu.FEEngine object at 0x7f9be1aa2730>, array([[3., 3.],\n       [3., 3.],\n       [3., 3.],\n       ...,\n       [3., 3.],\n       [3., 3.],\n       [3., 3.]]), <akantu.py11_akantu.ElementTypeMapArrayReal object at 0x7f9be1ab65b0>, 4114, <ElementType._triangle_3: 4>",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mNTF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mevalOnQuadraturePoints\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/SemesterProject/variationnal_operator_function.py:33\u001b[0m, in \u001b[0;36mNodalTensorField.evalOnQuadraturePoints\u001b[0;34m(self, output)\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mevalOnQuadraturePoints\u001b[39m(\u001b[38;5;28mself\u001b[39m, output):\n\u001b[0;32m---> 33\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msupport\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfem\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minterpolateOnIntegrationPoints\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     34\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnodal_field\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnodal_field\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msupport\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43melemtype\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mException\u001b[0m: akantu::debug::Exception : cannot resize a temporary array [../../../python/py_aka_array.hh:77]"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m output \u001b[38;5;241m=\u001b[39m aka\u001b[38;5;241m.\u001b[39mElementTypeMapArrayReal()\n\u001b[1;32m      2\u001b[0m output\u001b[38;5;241m.\u001b[39minitialize(mesh, nb_component\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[43mNTF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mevalOnQuadraturePoints\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/SemesterProject/SemesterProject/variationnal_operator_function.py:33\u001b[0m, in \u001b[0;36mNodalTensorField.evalOnQuadraturePoints\u001b[0;34m(self, output)\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mevalOnQuadraturePoints\u001b[39m(\u001b[38;5;28mself\u001b[39m, output):\n\u001b[0;32m---> 33\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msupport\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfem\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minterpolateOnIntegrationPoints\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     34\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnodal_field\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnodal_field\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnodal_field\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msupport\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43melemtype\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: interpolateOnIntegrationPoints(): incompatible function arguments. The following argument types are supported:\n    1. (self: akantu.py11_akantu.FEEngine, u: AkaArray, uq: AkaArray, nb_degree_of_freedom: int, type: akantu.py11_akantu.ElementType, ghost_type: akantu.py11_akantu.GhostType = <GhostType._not_ghost: 0>, filter_elements: AkaArray = array([], shape=(0, 1), dtype=int32)) -> None\n    2. (self: akantu.py11_akantu.FEEngine, u: AkaArray, uq: akantu.py11_akantu.ElementTypeMapArrayReal, filter_elements: akantu.py11_akantu.ElementTypeMapArrayInt = None) -> None\n\nInvoked with: <akantu.py11_akantu.FEEngine object at 0x7f9be1aa2730>, array([[3., 3.],\n       [3., 3.],\n       [3., 3.],\n       ...,\n       [3., 3.],\n       [3., 3.],\n       [3., 3.]]), <akantu.py11_akantu.ElementTypeMapArrayReal object at 0x7f9be1ab65b0>, 4114, <ElementType._triangle_3: 4>"
      ]
     }
    ],
    "source": [
+    "output = aka.ElementTypeMapArrayReal()\n",
+    "output.initialize(mesh, nb_component=2)\n",
     "NTF.evalOnQuadraturePoints(output)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49af8c94-45bd-46d9-81d0-e4f0c12a0eed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
